[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/card_engine/demo/screens/new_game/screen_new_game.gd" type="Script" id=1]
[ext_resource path="res://addons/card_engine/demo/screens/new_game/background.png" type="Texture" id=2]
[ext_resource path="res://addons/card_engine/demo/widgets/menu_button/widget_menu_button.tscn" type="PackedScene" id=3]

[node name="root" type="Node"]

script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="btn_fighter" parent="." index="1" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 180.0
margin_top = -100.0
margin_right = 528.0
margin_bottom = 8.0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]
button_text = "PLAY FIGHTER"

[node name="btn_mage" parent="." index="2" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 180.0
margin_top = -10.0
margin_right = 528.0
margin_bottom = 98.0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]
button_text = "PLAY MAGE"

[node name="btn_back" parent="." index="3" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 180.0
margin_top = 80.0
margin_right = 528.0
margin_bottom = 188.0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]
button_text = "BACK"

[connection signal="pressed" from="btn_fighter" to="." method="_on_btn_fighter_pressed"]

[connection signal="pressed" from="btn_mage" to="." method="_on_btn_mage_pressed"]

[connection signal="pressed" from="btn_back" to="." method="_on_btn_back_pressed"]


